Enable N64 depth compare for Extreme-G XG2 in custom settings.
Fixed Extreme-G XG2 requires depth compare for some effects #655

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -55,6 +55,14 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Extreme-G (U)
 frameBufferEmulation\N64DepthCompare=1
 
+[EXTREME%20G%202]
+Good_Name=Extreme-G XG2 (E) (U)
+frameBufferEmulation\N64DepthCompare=1
+
+[208E05CD]
+Good_Name=Extreme-G XG2 (J)
+frameBufferEmulation\N64DepthCompare=1
+
 [F1%20POLE%20POSITION%2064]
 Good_Name=F-1 Pole Position 64 (E)(U)
 frameBufferEmulation\copyToRDRAM=1
