Add custom ini settings for RE2. copyFromRDRAM is necessary for end game credits.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -10,6 +10,11 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[BioHazard%20II]
+frameBufferEmulation\copyFromRDRAM=1
+frameBufferEmulation\copyToRDRAM=0
+frameBufferEmulation\copyDepthToRDRAM=0
+
 [52150A67]
 Good_Name=Bokujou Monogatari 2 (J)
 frameBufferEmulation\N64DepthCompare=1
@@ -198,6 +203,11 @@ texture\enableHalosRemoval=1
 [RAT%20ATTACK]
 Good_Name=Rat Attack
 frameBufferEmulation\fbInfoDisabled=0
+
+[RESIDENT%20EVIL%20II]
+frameBufferEmulation\copyFromRDRAM=1
+frameBufferEmulation\copyToRDRAM=0
+frameBufferEmulation\copyDepthToRDRAM=0
 
 [ROCKMAN%20DASH]
 Good_Name=Rockman Dash - Hagane no Boukenshin (J)
